# sprite-splitter

./: .gitignore  README.md  index.html
backend/: .env  Dockerfile  README.md  app.py  image_processing.py  justfile  main.py  pyproject.toml
frontend/: index.html
html/: index.html  index2.html  index3.html  index4.html
